# trip-ai

./: .gitignore  DEPLOY.md  PYTHON_BACKEND_STATUS.md  README.md  generate_auth.py  multi-agent-architecture.html
tasks/: todo.md  (+3 more)
trip-server-py/: .env.example  Dockerfile  Makefile  create_tables.py  pyproject.toml  seed_spots.py  test.db  test_api.py
trip-server-py/data/spots/: 上海.json  乌鲁木齐.json  厦门.json  大连.json  宁波.json  昆明.json  武汉.json  济南.json  苏州.json  郑州.json
trip-server-py/eval/: __init__.py  __main__.py  llm_judge.py  mcp_smoke.py  multi_turn_smoke.py  run.py  types.py
trip-server-py/eval/evaluators/: __init__.py  multi_turn.py
trip-server-py/eval/retrieval/: __init__.py  dataset.py
trip-server-py/scripts/: benchmark_http.py  benchmark_rag.py  convert-poi.py  eval_compare.py  fetch_gaode_poi.py  run_all_benchmarks.py
trip-server-py/scripts/benchmark_lib/: auth.py
trip-server-py/src/: exceptions.py  main.py
trip-server-py/src/config/: __init__.py  database.py  llm.py  redis_client.py  settings.py
trip-server-py/src/controllers/: commute_controller.py  (+6 more)
trip-server-py/tests/: conftest.py  test_agent_engine.py  test_agent_imports.py  test_auxiliary_services.py  test_commute_service.py  test_conversation_controller.py  test_conversation_service.py  test_eval_framework.py  test_history_controller.py  test_history_service.py  test_knowledge_controller.py  test_knowledge_service.py  test_models.py  test_optimize_service.py  test_rag.py  test_sse_parsing.py  test_summary_service.py  test_trip_service.py  test_user_controller.py  test_user_service.py
(+572 files in other folders)
