[project]
name = "trip-server-py"
version = "0.1.0"
description = "Trip AI Travel Planner - Python Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "gunicorn>=22.0.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncmy>=0.2.0",
    "greenlet>=3.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "redis>=5.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "chromadb>=0.5.0",
    # sentence-transformers 和 torch 体积大，T01 不需要，T05 再取消注释
    # "sentence-transformers>=3.0.0",
    # "torch>=2.2.0",
    "numpy>=1.26.0",
    "slowapi>=0.1.9",
    "pybreaker>=1.1.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",  # httpx 用于 TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
